--- a/ex2-holygrail-layout/index.html
+++ b/ex2-holygrail-layout/index.html
@@ -10,13 +10,7 @@
 </head>
 
 <body>
-  <div class="header">Header</div>
-  <div class="main">
-    <div class="nav">navigation</div>
-    <div class="content">content</div>
-    <div class="advertisement">advertisement</div>
-  </div>
-  <div class="footer">Footer</div>
+  <!-- Start coding here -->
 </body>
 
 </html>
