--- a/ex2-holygrail-layout/index.html
+++ b/ex2-holygrail-layout/index.html
@@ -10,7 +10,13 @@
 </head>
 
 <body>
-  <!-- Start coding here -->
+  <div class="header">Header</div>
+  <div class="main">
+    <div class="nav">navigation</div>
+    <div class="content">content</div>
+    <div class="advertisement">advertisement</div>
+  </div>
+  <div class="footer">Footer</div>
 </body>
 
 </html>
